# human_capital_manager

./: .gitignore  CMakeLists.txt  Employee.hpp  Project.hpp  Startup.hpp  State.hpp  TODO.md  main.cpp  readme.md
